--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "catmash",
+  "name": "avions de chasse",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -15,6 +15,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "raphael sebban",
+  "author": "Nicolas THIROUIN - Valentin TRAN ",
   "license": "ISC"
 }
